--- a/old_template/Relazione.tex
+++ b/old_template/Relazione.tex
@@ -20,9 +20,9 @@
 \newpage
 \input{introduzione.tex}
 %\index{paragrafo1}
-%\input{paragrafo1.tex}
+\input{Pressione_vs_pompate.tex}
 %\newpage
-%\input{paragrafo2.tex}
+\input{FindGas.tex}
 %\newpage
 %\input{paragrafo3.tex}
 %\newpage
