--- a/old_template/introduzione.tex
+++ b/old_template/introduzione.tex
@@ -1,2 +1,2 @@
 \section{Introduzione}
-Possiamo inizialmente affermare che...
+Il primo scopo di questa esperienza di laboratorio è quello di studiare l'andamento della pressione in funzione del tempo durante la fase di svuotamento di un dato volume. Il secondo obbiettivo di questa sessione di laboratorio e quello di ricavare tramite misure di massa i vari tipi di gas presenti in uno stesso volume.
