Altra roba scritta, susate il ritardo

--- a/old_template/FindGas.tex
+++ b/old_template/FindGas.tex
@@ -18,7 +18,7 @@ Sfruttando la legge dei gas ideali:
 	P\,V \,=\, n\,R\,T
 \end{equation}
 
-dove P rappresenta la pressione del gas, Vil volume del gas, R non è altro che la costante universale dei gas, T è la temperatura del gas e infine n è il numero di moli del gas, siamo riusciti a ricavare il numero di moli contenute nella bottiglia ad una data pressione fissata di circa $\,3\,10^3\,\,Pa$.
+dove P rappresenta la pressione del gas, V il volume del gas, R non è altro che la costante universale dei gas, T è la temperatura del gas e infine n è il numero di moli del gas, siamo riusciti a ricavare il numero di moli contenute nella bottiglia ad una data pressione di circa $\,3\,10^3\,\,Pa$.
 
 Quindi abbiamo trovato che il numero di moli contenute nella bottiglia sono:
 
@@ -26,9 +26,17 @@ Quindi abbiamo trovato che il numero di moli contenute nella bottiglia sono:
 	n \,=\, \frac{P\,V}{R\,T} \,=\, tot moli
 \end{equation}
 
-Infine conoscendo il numero di moli contenute nella bottiglia grazie alle due misure di peso della bottiglia da quando era scarica di gas a quando era piena di gas abbiamo ricavato la massa totale del gas, che poi divisa per il numero di moli contenute nella bottiglia restituiva il valore della massa molare del gas he permette quindi di identificare il gas contenuto nella bottiglia. In sintesi:
+Infine conoscendo il numero di moli contenute nella bottiglia grazie alle due misure di peso della bottiglia la prima relativa al peso della bottiglia "svuotata" dal gas, la seconda relativa al peso della bottiglia piena di gas, abbiamo ricavato la massa totale del gas che, divisa per il numero di moli contenute nella bottiglia, restituiva il valore della massa molare relativa al gas e questa permette quindi di identificare il gas contenuto nella bottiglia. In sintesi:
 
 \begin{equation}
 	m_[mol] \,=\, \frac{M}{n}
 \end{equation}
+
+Pertanto i risultati da noi ottenuti sono i seguenti:
+
+\begin{itemize}
+	\item{massa molare x}
+	\item{massa molare y}
+	\item{massa molare z}
+\end{itemize}
 
