--- a/old_template/Pressione_vs_pompate.tex
+++ b/old_template/Pressione_vs_pompate.tex
@@ -2,7 +2,7 @@
 
 Gli strumenti che abbiamo utilizzato per eseguire questo esperimento sono i seguenti:
 \begin{itemize}
-	\item{Una bottigla di vetro a cui è applicata un manometro Bourdon di risoluzione di lettura pari a 0.1 bar;}
+	\item{Una bottigla di vetro a cui è applicato un manometro Bourdon di risoluzione di lettura pari a 0.1 bar;}
 	\item{Un sisiema di raccorderia vario utilizzato per collegare la pompa a vuoto con la bottiglia e il manometro a U di Torricelli con una risoluzione di lettura di 0.1 mmHg;}
 	\item{Pompa a mano per raggiungere l'alto vuoto;}
 	\item{Pompa meccanica a membrana doppio stadio (vuoto limite 500 Pa);}
@@ -32,9 +32,9 @@ La stima fatta del volume della bottiglia è la seguente:
 	\mathcal{V} \, = \, (2769 \pm 8) dm^3  
 \end{equation}
 
-tuttavia non siamo molto fiduciosi della sua accuratezza dal momento che durante le operazioni di travaso del liquido dalla bottiglia nei cilindri graduati una minima parte di questo è andata persa.
+tuttavia non siamo molto fiduciosi della sua accuratezza dal momento che durante le operazioni di travaso del liquido dalla bottiglia nei cilindri graduati una minima parte di questo è andata persa. Inoltre non siamo riusciti a stimare con precisione il volume occupato dal tappo della bottiglia che comprendeva anche il manometro di Bourdon.
 
-Graficando i dati raccolti relativi all'andamento della pressione in funzione del numero di pompate effettuate otteniamo il grafico seguente, che come possiamo notare ha un andameto esponenziale. Quindi possiamo notare come avvicinandosi al valore del vuoto limite della pompa da noi utilizzata la quantità di gas estratta diminuisca drasticamente e pertanto l'abbassamento della pressione interna della bottiglia risulti sempre più impercettibile.
+Graficando i dati raccolti relativi all'andamento della pressione in funzione del numero di pompate effettuate otteniamo il grafico seguente, che come possiamo notare ha un andameto esponenziale. Quindi possiamo notare come avvicinandosi al valore del vuoto limite della pompa da noi utilizzata la quantità di gas estratta diminuisca drasticamente e pertanto l'abbassamento della pressione interna della bottiglia risulti sempre più impercettibile, infatti vi è un andamento asintotico della pressione attorno al valore di x Pa.
 
 GRAFICO
 
@@ -43,3 +43,5 @@ GRAFICO
 %Il grafico dell'andamento della pressione in funzione del tempo trascorso dall'inizio del processo di svuotamento della bottiglia da parte della pompa meccanica a membrana a doppio stadio è riportato nel grafico sottostante, che come si può notare ha un andamento esponenziale come trovato sopra.
 
 \subsection{Conclusioni parziali}
+
+Non siamo riusciti purtroppo ad analizzare l'andamento della pressione in funzione del tempo, quindi di una variabile continua, a causa di una scarsa qualità del video realizzato e della mancanza nelle riprese della terminazione delle estremità del manometro di Torricelli, e pertanto del relativo anamento pressione vs tempo. Possiamo però supporre che la curva che avrebbe descritto la pressione in funzione del tempo sarebbe stata, come nel caso precedente, un'esponenziale, con un andamento asintotico verso pressioni tendenti al vuoto limite della pompa a membrana.
