--- a/old_template/Pressione_vs_pompate.tex
+++ b/old_template/Pressione_vs_pompate.tex
@@ -3,14 +3,14 @@
 Gli strumenti che abbiamo utilizzato per eseguire questo esperimento sono i seguenti:
 \begin{itemize}
 	\item{Una bottigla di vetro a cui è applicato un manometro Bourdon di risoluzione di lettura pari a 0.1 bar;}
-	\item{Un sisiema di raccorderia vario utilizzato per collegare la pompa a vuoto con la bottiglia e il manometro a U di Torricelli con una risoluzione di lettura di 0.1 mmHg;}
-	\item{Pompa a mano per raggiungere l'alto vuoto;}
+	\item{Un sisiema di raccorderia vario utilizzato per collegare la pompa a vuoto con la bottiglia e il manometro a U di Torricelli con una risoluzione di lettura di 1 mmHg;}
+	\item{Pompa a mano per raggiungere l'basso vuoto;}
 	\item{Pompa meccanica a membrana doppio stadio (vuoto limite 500 Pa);}
 	\item{Cilindri graduari con le seguenti risoluzioni di misura: quello da 1 litro ha una risoluzione di 10 ml, quello da un quarto di litro ha una risoluzione pari a 5 ml ed infine il cilindro graduato da 100 ml ha una rsoluzione di 1 ml;}
-	\item{Una bilancia manuale di risoluzione 0.05 g.}
+	\item{Una bilancia manuale di risoluzione 0.1 g.}
 \end{itemize}
 
-Ci teniamo a specificare che le indicazioni sulla risoluzione degli strumenti non sono riportate nelle unità di misura del sistema internazionale in quanto abbiamo voluto lasciare le indicazione sulle modalità di misura dello strumento. Nel segiuto della relazione tuttavia tutte le misure effettuate e i risultati trovati saranno espressi nelle opportune unita di misura dell'S.I.
+Ci teniamo a specificare che le indicazioni sulla risoluzione degli strumenti non sono riportate nelle unità di misura del sistema internazionale in quanto abbiamo voluto lasciare le indicazione sulle modalità di misura dello strumento. Nel seguito della relazione tuttavia tutte le misure effettuate e i risultati trovati saranno espressi nelle opportune unità di misura dell'S.I.
 
 \section{Andamento della pressione in funzione del tempo}
 
@@ -21,7 +21,7 @@ Ci proponiamo ora di analizzare l'andamento della pressione interna della bottig
 \begin{itemize}
 	\item{Come prima operazione abbiamo ricavato il voume incognito della bottiglia riempiendola d'acqua distillata e misurando il volume del liquido contenuto travasandolo in cilindri graduati;}
 	\item{Successivamente abbiamo valutato l'andamento della pressione interna alla bottiglia in funzione del numero di pompate effettuate;}
-	\item{Di seguito abbiamo riempito la bottiglia di aria, grazie ad un compressore, fino a raggiungere una pressione interna di 3 atmosfere, equivalenti circa a $\,3\,10^5\,\,Pa$, e abbiamo valutato l'andamento della pressione interna alla bottiglia in funzione del tempo utilizzando la pompa meccanica a membrana a doppio stadio;}
+	\item{Di seguito abbiamo riempito la bottiglia di aria, grazie ad un compressore, fino a raggiungere una pressione interna di 3 atmosfere, equivalenti circa a $3 \cdot 10^5$ \si{\pascal}, e abbiamo valutato l'andamento della pressione interna alla bottiglia in funzione del tempo utilizzando la pompa meccanica a membrana a doppio stadio;}
 \end{itemize}
 
 \subsection{Analisi dei dati}
@@ -29,7 +29,7 @@ Ci proponiamo ora di analizzare l'andamento della pressione interna della bottig
 La stima fatta del volume della bottiglia è la seguente:
 
 \begin{equation}
-	\mathcal{V} \, = \, (2769 \pm 8) dm^3  
+	\mathcal{V} \, = \, (2769 \pm 8) \; \si{\deci\meter}^3  
 \end{equation}
 
 tuttavia non siamo molto fiduciosi della sua accuratezza dal momento che durante le operazioni di travaso del liquido dalla bottiglia nei cilindri graduati una minima parte di questo è andata persa. Inoltre non siamo riusciti a stimare con precisione il volume occupato dal tappo della bottiglia che comprendeva anche il manometro di Bourdon.
