--- a/old_template/Pressione_vs_pompate.tex
+++ b/old_template/Pressione_vs_pompate.tex
@@ -3,14 +3,16 @@
 Gli strumenti che abbiamo utilizzato per eseguire questo esperimento sono i seguenti:
 \begin{itemize}
 	\item{Una bottigla di vetro a cui è applicato un manometro Bourdon di risoluzione di lettura pari a 0.1 bar;}
-	\item{Un sisiema di raccorderia vario utilizzato per collegare la pompa a vuoto con la bottiglia e il manometro a U di Torricelli con una risoluzione di lettura di 1 mmHg;}
-	\item{Pompa a mano per raggiungere l'basso vuoto;}
+	\item{Un sisiema di raccorderia utilizzato per collegare la pompa a vuoto con la bottiglia e il manometro a U di Torricelli con una risoluzione di lettura di 1 mmHg;}
+	\item{Pompa a mano per raggiungere il basso vuoto;}
 	\item{Pompa meccanica a membrana doppio stadio (vuoto limite 500 Pa);}
-	\item{Cilindri graduari con le seguenti risoluzioni di misura: quello da 1 litro ha una risoluzione di 10 ml, quello da un quarto di litro ha una risoluzione pari a 5 ml ed infine il cilindro graduato da 100 ml ha una rsoluzione di 1 ml;}
+	\item{Cilindri graduati con le seguenti risoluzioni di misura: quello da 1 litro ha una risoluzione di 10 ml, quello da un quarto di litro ha una risoluzione pari a 5 ml ed infine il cilindro graduato da 100 ml ha una rsoluzione di 1 ml;}
 	\item{Una bilancia manuale di risoluzione 0.1 g.}
 \end{itemize}
-
-Ci teniamo a specificare che le indicazioni sulla risoluzione degli strumenti non sono riportate nelle unità di misura del sistema internazionale in quanto abbiamo voluto lasciare le indicazione sulle modalità di misura dello strumento. Nel seguito della relazione tuttavia tutte le misure effettuate e i risultati trovati saranno espressi nelle opportune unità di misura dell'S.I.
+%
+Nota: %Ci teniamo a specificare che
+le indicazioni sulla risoluzione degli strumenti non sono riportate nelle unità di misura del S.I. %sistema internazionale
+in quanto abbiamo voluto lasciare le indicazione sulle modalità di misura dello strumento. Nel seguito della relazione tuttavia tutte le misure effettuate e i risultati trovati saranno espressi nelle opportune unità di misura dell'S.I.
 
 \section{Andamento della pressione in funzione del tempo}
 
