ora si lavora in E1/Latex

--- a/E1/Latex/Relazione.tex
+++ b/E1/Latex/Relazione.tex
@@ -14,20 +14,10 @@
 
 \begin{document}
 
-\input{cover.tex}
-\newpage
-\input{tableofcontents.tex}
-\newpage
+\input{title.tex}
 \input{introduzione.tex}
-%\index{paragrafo1}
 \input{Pressione_vs_pompate.tex}
-%\newpage
 \input{FindGas.tex}
-%\newpage
-%\input{paragrafo3.tex}
-%\newpage
-%\input{paragrafo4.tex}
-\newpage
 \input{conclusioni.tex}
 
 \end{document}
