--- a/E1/Latex/title.tex
+++ b/E1/Latex/title.tex
@@ -1,7 +1,7 @@
 \begin{center}
 
 	\vspace{0.5cm}
-     	\textsc{\LARGE }
+     	{\huge Andamento della pressione in funzione del tempo. Misura della massa molare di alcuni gas.}
 	\vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
@@ -10,6 +10,6 @@
 	\vspace{0.2cm}
       	{\large 23 settembre 2013}
     
-    \vspace{1cm}
+    \vspace{0.7cm}
 
 \end{center}
