solo dave legge sti cazzo di commit

--- a/E1/Latex/Pressione_vs_pompate.tex
+++ b/E1/Latex/Pressione_vs_pompate.tex
@@ -78,4 +78,7 @@ durante l'esperimento si è verificata una perdita attorno alla 500 pompata, che
 
 \subsection{Conclusioni parziali}
 
-Non siamo riusciti purtroppo ad analizzare l'andamento della pressione in funzione del tempo, quindi di una variabile continua, a causa di una scarsa qualità del video realizzato. Nella ripresa non si vedevano le estremità del manometro di Torricelli, e la lettura del cronometro risultava impossibile. Possiamo però supporre che la curva che avrebbe descritto la pressione in funzione del tempo sarebbe stata, come nel caso precedente, un'esponenziale descrescente, con un andamento asintotico verso la pressione di vuoto limite della pompa a membrana utilizzata.
+Nonostante la perdita di gas, l'esperimento è comunque andato a buon fine, e ci ha permesso di vedere come si comporta
+una pompa a vuoto durante la fase di pompaggio.
+
+Tuttavia, non siamo riusciti ad analizzare l'andamento della pressione in funzione del tempo, quindi di una variabile continua, a causa di una scarsa qualità del video realizzato. Nella ripresa non si vedevano le estremità del manometro di Torricelli, e la lettura del cronometro risultava impossibile. Possiamo però supporre che la curva che avrebbe descritto la pressione in funzione del tempo sarebbe stata, come nel caso precedente, un'esponenziale descrescente, con un andamento asintotico verso la pressione di vuoto limite della pompa a membrana utilizzata.
