--- a/E1/Latex/FindGas.tex
+++ b/E1/Latex/FindGas.tex
@@ -1,35 +1,49 @@
 \section{Grazie a misure di massa si ricava il tipo di gas presente in un dato volume}   
 
-In questa seconda parte della relazione vogliamo riuscire a ricavare mediante due misure di massa, bottiglia piena di gas e bottiglia vuota di gas, e sfruttando la legge dei gas ideli il peso molare del gas e pertanto risalire al tipo di gas presente nella bottiglia.
+In questa seconda parte della relazione vogliamo riuscire a ricavare mediante due misure di massa,
+a bottiglia piena di gas e a bottiglia vuota, la massa molare di alcuni comuni gas. Per fare ciò
+sfrutteremo la legge dei gas ideali. Uno dei gas era incognito e dovevamo riuscire a capire quale gas fosse.
 
 \subsection{Acquisizione dei dati}
 
 \begin{itemize}
+	\item{Come prima operazione abbiamo ricavato il voume incognito della bottiglia riempiendola d'acqua distillata e misurando il volume del liquido contenuto travasandolo in cilindri graduati;}
 	\item{Come prima operazione abbiamo cercato di svuotare al massimo delle nostre capacità la bottiglia sfruttando la pompa meccanica a membrana a doppio stadio, in modo da rimuovere la maggior quantità di gas possibile. Successivamente abbiamo pesato la bottiglia "vuota" e abbiamo registrato il suo valore;}
-	\item{Di segueito abbiamo riempito la bottiglia di aria fino a raggiungere una pressione interna di circa 3 atmosfere ovvero $\,3\,10^3\,\,Pa$. Quindi abbiamo pesato nuovamente la bottiglia piena annotandone il valore;}
-	\item{Successivamente abbiamo determinato grazie a misure di massa i vari tipi di gas contenuti all'interno della bottiglia nel seguente modo: si svuota la bottiglia mediante la pompa meccanica a membrana in modo da rimuovere il più possibile la presenza del precedente gas, si annota la masa della bottiglia "vuota" e successivamente la si riempie fino a raggiungere una pressione di circa $\,3\,10^3\,\,Pa$. Di seguito si pesa la bottigli piena del gas incognito e se ne annota il valore.}
+	\item{Di seguito abbiamo riempito la bottiglia di aria fino a raggiungere una pressione interna di circa $3 \cdot 10^3 \; \si{\pascal}$. Quindi abbiamo pesato nuovamente la bottiglia piena annotandone il peso;}
+	\item{Il procedimento è stato ripetuto con tutti i gas, compreso quello incognito.}
 \end{itemize}
 
 \subsection{Analisi dei dati}
+
+La stima fatta del volume della bottiglia è la seguente:
+
+\begin{equation}
+	\mathcal{V} \, = \, (2.769 \pm 0.008) \; \si{\deci\meter}^3  
+\end{equation}
+%
+tuttavia non siamo molto fiduciosi della sua accuratezza dal momento che durante le operazioni di
+travaso del liquido dalla bottiglia nei cilindri graduati una minima parte di questo è andata persa.
+Inoltre non siamo riusciti a stimare con precisione il volume occupato dal tappo della bottiglia che
+comprendeva anche il manometro di Bourdon. Questi ultimi contributi tendono tuttavia a cancellarsi
+per cui non dovrebbero contribuire molto all'incertezza.
 
 Sfruttando la legge dei gas ideali:
 
 \begin{equation}
 	P\,V \,=\, n\,R\,T
 \end{equation}
-
-dove P rappresenta la pressione del gas, V il volume del gas, R non è altro che la costante universale dei gas, T è la temperatura del gas e infine n è il numero di moli del gas, siamo riusciti a ricavare il numero di moli contenute nella bottiglia ad una data pressione di circa $\,3\,10^3\,\,Pa$.
-
-Quindi abbiamo trovato che il numero di moli contenute nella bottiglia sono:
+%
+si può ricavare il numero di moli di gas presente all'interno della bottiglia, ottenendo:
 
 \begin{equation}
-	n \,=\, \frac{P\,V}{R\,T} \,=\, tot moli
+	n \,=\, \frac{P\,V}{R\,T}
 \end{equation}
 
-Infine conoscendo il numero di moli contenute nella bottiglia grazie alle due misure di peso della bottiglia la prima relativa al peso della bottiglia "svuotata" dal gas, la seconda relativa al peso della bottiglia piena di gas, abbiamo ricavato la massa totale del gas che, divisa per il numero di moli contenute nella bottiglia, restituiva il valore della massa molare relativa al gas e questa permette quindi di identificare il gas contenuto nella bottiglia. In sintesi:
+Quindi conoscendo il numero di moli contenute nella bottiglia, e conoscendo la massa del gas contenuto,
+abbiamo calcolato la massa molare dividendo la massa per il numero di moli:
 
 \begin{equation}
-	m_[mol] \,=\, \frac{M}{n}
+	M_{mol} \,=\, \frac{m}{n}
 \end{equation}
 
 Pertanto i risultati da noi ottenuti sono i seguenti:
