--- a/E1/Latex/conclusioni.tex
+++ b/E1/Latex/conclusioni.tex
@@ -1,2 +1,3 @@
 \section{Conclusioni}
-in conclusione possiamo dire che...
+
+L'esperimento è andato a buon fine, anche se con qualche incidente di percorso.
