--- a/E1/Latex/introduzione.tex
+++ b/E1/Latex/introduzione.tex
@@ -1,6 +1,7 @@
 \section{Introduzione}
 
 Il primo scopo di questa esperienza di laboratorio è quello di studiare l'andamento della pressione
-in funzione del tempo durante la fase di svuotamento di un dato volume. Il secondo obbiettivo di
-questa sessione di laboratorio e quello di riconoscere, tramite misure di massa, alcuni comuni gas,
+in funzione del tempo durante la fase di svuotamento di un dato volume.\newline
+Il secondo obbiettivo di
+questa sessione di laboratorio è quello di riconoscere, tramite misure di massa, alcuni comuni gas,
 e di misurarne la massa molare.
