--- a/E1/Latex/FindGas.tex
+++ b/E1/Latex/FindGas.tex
@@ -7,29 +7,28 @@ sfrutteremo la legge dei gas ideali. Uno dei gas era incognito e dovevamo riusci
 \subsection{Acquisizione dei dati}
 
 \begin{itemize}
-	\item{Come prima operazione abbiamo ricavato il voume incognito della bottiglia riempiendola d'acqua distillata e misurando il volume del liquido contenuto travasandolo in cilindri graduati;}
-	\item{Come prima operazione abbiamo cercato di svuotare al massimo delle nostre capacità la bottiglia sfruttando la pompa meccanica a membrana a doppio stadio, in modo da rimuovere la maggior quantità di gas possibile. Successivamente abbiamo pesato la bottiglia "vuota" e abbiamo registrato il suo valore;}
-	\item{Di seguito abbiamo riempito la bottiglia di aria fino a raggiungere una pressione interna di circa $3 \cdot 10^3 \; \si{\pascal}$. Quindi abbiamo pesato nuovamente la bottiglia piena annotandone il peso;}
+	\item{Come prima operazione abbiamo ricavato il voume incognito della nostra bottiglia riempiendo d'acqua distillata una bottiglia equivalente e misurando il volume del liquido contenuto travasandolo in cilindri graduati;}
+	\item{Una volta ricavato il volume, abbiamo cercato di svuotare al massimo delle nostre capacità la bottiglia sfruttando la pompa meccanica a membrana a doppio stadio, in modo da rimuovere la maggior quantità di gas possibile. Successivamente abbiamo pesato la bottiglia "vuota" e abbiamo registrato il suo valore;}
+	\item{Di seguito abbiamo riempito la bottiglia di gas fino a raggiungere una pressione interna di circa $3 \cdot 10^3 \; \si{\pascal}$. Quindi abbiamo pesato nuovamente la bottiglia piena annotandone il peso;}
 	\item{Il procedimento è stato ripetuto con tutti i gas, compreso quello ignoto.}
 \end{itemize}
 
 \subsection{Analisi dei dati}
 
-La stima fatta del volume della bottiglia è la seguente:
+La stima fatta del volume della bottiglia è:
 
 \begin{equation}
 	\mathcal{V} \, = \, (2.769 \pm 0.005) \; \si{\deci\meter}^3  
 \end{equation}
 %
-tuttavia non siamo molto fiduciosi sulla stima dell'incertezza dal momento che durante le operazioni di
-travaso del liquido dalla bottiglia nei cilindri graduati una parte di questo è andata persa ed inoltre
+tuttavia non siamo molto fiduciosi sulla stima dell'incertezza dal momento che, durante le operazioni di
+travaso del liquido dalla bottiglia nei cilindri graduati, una parte di questo è andata persa ed inoltre
 il numero riportato è ricavato dalla sola incertezza di risoluzione.
 Non siamo riusciti a stimare con precisione il volume occupato dal tappo della bottiglia che
 comprendeva anche il manometro di Bourdon. Questi ultimi contributi tendono tuttavia a cancellarsi
-per cui non dovrebbero contribuire molto al volume totale.
+per cui non dovrebbero contribuire molto al volume totale.%\newline
 
 Sfruttando la legge dei gas ideali:
-
 \begin{equation}
 	P\,V \,=\, n\,R\,T
 \end{equation}
@@ -68,7 +67,7 @@ L'incertezza sulla pressione è pari all'incertezza di risoluzione ovvero \SI{3}
 è anch'essa di risoluzione ed è pari a \SI{0.04}{\gram}.
 
 Come si vede i risultati sono abbastanza buoni. Nel caso dell'aria il valore riportati in letteratura è di \SI{29}{\gram\per\mole},
-ma si riferisca all'aria anidra, fatto che può spiegare la discrepanza con il valore da noi osservato. Nel caso dell'elio
+ma si riferisce all'aria anidra, fatto che può spiegare la discrepanza con il valore da noi osservato. Nel caso dell'elio
 la massa molare ottenuta è compatibile entro l'incertezza con il valore ``vero''. Nel caso dell'azoto siamo
 abbastanza vicini al valore vero di \SI{28}{\gram\per\mole} e comunque il risultato è in accordo con la massa molare calcolata per l'aria,
 cosa rassicurante essendo l'aria composta principalmente di azoto. Il valore di massa molare del biossido di carbonio
@@ -76,6 +75,9 @@ riportato da fonti attendibili è di circa \SI{44}{\gram\per\mole}, vicino al va
 Infine il gas ignoto, che è sicuramente Argon, poiché era l'unico gas presente in laboratorio che non ci fosse stato
 ancora dato, mostra un valore misurato un po' minore di quello ``vero'' \SI{40}{\gram\per\mole}.
 
+\subsection{Conclusioni seconda parte}
+
 A parte nel caso di elio e biossido di carbonio, i risultati ottenuti mostrano discrepanze piccole ma significative
-con i valori della letteratura, che ci impediscono di identificare con certezza il gas ignoto. Ipotizziamo che ciò sia
-dovuto alla presenza di gas all'interno della bottiglia quando ``vuota''.
+con i valori riportati in letteratura, che ci impediscono di identificare con certezza il gas ignoto. Ipotizziamo che ciò sia dovuto alla presenza di gas all'interno
+della bottiglia quando ``vuota''.
+Questo metodo, inoltre, è inconcludente nel caso in cui nel contenitore fosse presente una miscela al posto di un gas puro.
