--- a/E1/Latex/Pressione_vs_pompate.tex
+++ b/E1/Latex/Pressione_vs_pompate.tex
@@ -31,15 +31,15 @@ della pressione nel tempo utilizzando una pompa meccanica, da cui il nome del pa
 	in funzione del tempo utilizzando la pompa meccanica a membrana a doppio stadio;}
 \end{itemize}
 
-\subsection{Analisi dei dati}
-
-\begin{figure}[t]
+\begin{figure}[h!]
     \includegraphics[width=160mm]{graph.pdf}
     \caption{Grafico dei dati ottenuti durante l'esperimento. Il buco presente tra le 500 e le 580 pompate è dovuto ad una perdita d'aria
     che ci ha costretto a fare 60 pompate per tornare al livello precedente. I punti verdi sono stati tolti per aggiustare il $\chi^2$.
     Le barre d'errore sono piccole e non visibili. L'andamento riportato è il risultato della regressione.}
     \label{fig:graph1}
 \end{figure}
+
+\subsection{Analisi dei dati}
 
 Graficando i dati raccolti relativi all'andamento della pressione in funzione del numero di pompate effettuate otteniamo
 il grafico in Figura \ref{fig:graph1}, che come possiamo notare ha un andamento esponenziale. Inoltre, a parità
