--- a/E1/Latex/Relazione.tex
+++ b/E1/Latex/Relazione.tex
@@ -18,6 +18,6 @@
 \input{introduzione.tex}
 \input{Pressione_vs_pompate.tex}
 \input{FindGas.tex}
-\input{conclusioni.tex}
+%\input{conclusioni.tex}
 
 \end{document}
