--- a/E2/Latex/Relazione.tex
+++ b/E2/Latex/Relazione.tex
@@ -16,13 +16,7 @@
 
 \input{title.tex}
 \input{introduzione.tex}
-<<<<<<< HEAD
-\input{analisi.tex}
-\input{conclusioni.tex}
-=======
-\input{Pressione vapore H2O.tex}
-\input{qualcosa1.tex}
+\input{Pressione_vapore_H2O.tex}
 %\input{conclusioni.tex}
->>>>>>> b60442ae49fcd8ed0207361a91af82c82f0f82b5
 
 \end{document}
