--- a/E2/Latex/Pressione_vapore_H2O.tex
+++ b/E2/Latex/Pressione_vapore_H2O.tex
@@ -1,7 +1,7 @@
 \section{Misurazione della pressione di vapore dell'acqua a temperature differenti}
 
-In questa sezione illustreremo il materiale a nostra disposizione per l'esecuzione
-dell'esperimento e di seguito faremo un'analisi dei dati da noi raccolti.
+%In questa sezione illustreremo il materiale a nostra disposizione per l'esecuzione
+%dell'esperimento e di seguito faremo un'analisi dei dati da noi raccolti.
 
 \subsection{Apparato sperimentale}
 
@@ -20,7 +20,7 @@ Per misurare la pressione di vapore dell'acqua a differenti temperature abbiamo 
 
 \begin{itemize}
 	\item{abbiamo posto a bagnomaria la bottigietta di vetro;}
-	\item{abbiamo fatto rggiungere la temperatura di circa 20$^\circ$C all'acqua demineralizzata interna alla bottiglietta;}
+	\item{abbiamo fatto raggiungere la temperatura di circa 20$^\circ$C all'acqua demineralizzata interna alla bottiglietta;}
 	\item{variando la pressione interna della bottiglietta abbiamo riempito il
         tubicino che collega la bottiglia con il manometro di acqua, che è un fluido incomprimibile;}
 	\item{una volta che il sistema ha raggiunto la temperatura di 35$^\circ$C abbiamo
@@ -58,8 +58,7 @@ Questa equazione descrive quindi il variare della pressione di vapore di una sos
 Per verificare questa legge abbiamo quindi misurato la pressione di vapore dell'acqua a diverse temperature,
 ottenendo il grafico in figura \ref{fig:graph}. 
 
-Nella (\ref{eq:clap}), prendendo il logaritmo di entrambi i membri, abbiamo linearizzato
-l'equazione ed eseguito la regressione lineare, ottenendo i seguenti valori per i parametri:
+Applicando il logaritmo ad entrambi i membri, abbiamo linearizzato l'equazione (\ref{eq:clap}) ed eseguito la regressione lineare, ottenendo i seguenti valori per i parametri:
 
 \begin{equation}
     P_0 = 1.6 \cdot 10^{11} \pm 0.4 \cdot 10^{11} \; \si{\pascal} \qquad \Delta H = 43900 \pm  700 \; \si{\joule\per\kilo\gram} 
@@ -71,7 +70,7 @@ di acqua. Il valore da noi trovato è in accordo con i valori reperibili in lett
 comunque specificare che il calore latente di vaporizzazione varia leggermente con la temperatura,
 fatto non contemplato dai nostri calcoli.
 
-La figura \ref{fig:graph} riassume i risultati fin qui ottenuti. I dati sperimentali risultano in buon accordo
+La Figura \ref{fig:graph} riassume i risultati fin qui ottenuti. I dati sperimentali risultano in buon accordo
 con la legge studiata. Addirittura le incertezze da noi assunte si sono rivelate soprastimate, infatti
 il chi quadro è risultato basso, e abbiamo dovuto corregerle. Questo ha senso, poiché sul manometro potevamo facilmente
 leggere variazioni di pressione di metà tacca (pari a 2500 \si{\pascal}).
