--- a/E2/Latex/introduzione.tex
+++ b/E2/Latex/introduzione.tex
@@ -1,10 +1,10 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza di laboratorio è quella di misurare la pressione
+Lo scopo di questa esperienza di laboratorio è quello di misurare la pressione
 di vapore dell'acqua all'equilibrio nell'intervallo di temperatura tra i 35$^\circ$C
-e 85$^\circ$C. Quindi grazie alle misure di pressione versus temperatura potremmo verificare
+e 85$^\circ$C. Quindi, grazie alle misure di pressione e temperatura, verificare
 l'equazione di Clausius-Claperyon, che descrive la variazione della pressione di vapore
 in funzione della temperatura lungo la curva di equilibrio tra due fasi di una stessa sostanza,
 che nel nostro caso sono lo stato liquido e quello gassoso.
 Infine, sfruttando i dati raccolti che la legge sopracitata cercheremo di stimare un valore
-il calore latente di vaporizzazione dell'acqua.
+per il calore latente di vaporizzazione dell'acqua.
